fix : correction SonarQube